<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e8eaf6"
        android:fontFamily="monospace"
        android:text="@string/The_third_Screen"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="191dp"
        android:layout_height="38dp"
        android:background="@color/black"
        android:onClick="toFirstActivity"
        android:text="@string/On_the_first_Screen" />

    <Button
        android:id="@+id/buttonSecond"
        android:layout_width="191dp"
        android:layout_height="36dp"
        android:background="@color/black"
        android:onClick="toSecondActivity"
        android:text="@string/On_the_second_Screen" />


</LinearLayout>